# pipeswitch

./: 1  Cargo.toml  README.md  config.json  pipeswitch  pw-patchbay
.github/workflows/: dev.yml  release.yml
contrib/: pipeswitchd.service
contrib/pkgbuild-bin/: PKGBUILD
contrib/pkgbuild-git/: PKGBUILD
examples/: client.json  device.json  factory.json  link.json  module.json  node.json  port.json
pipeswitch-lib/: Cargo.toml
pipeswitch-lib/src/: config.rs  default.toml  lib.rs
pipeswitch-lib/src/pw/: mainloop.rs  mod.rs  types.rs
pipeswitchd/: Cargo.toml
pipeswitchd/src/: config.rs  main.rs  rules.rs  testconfig.toml
pipeswitchd/src/sdl2_signaller/: mod.rs
