[package]
name = "pipeswitch-lib"
description = "Core library for the Pipeswitch GUI and Daemon"
authors = ["Sofia <sofia@teascade.net>"]
version = "1.0.1"
license = "GPL-3.0-or-later"
readme = "../README.md"
repository = "https://github.com/Teascade/pipeswitch"
documentation = "https://docs.rs/pipeswitch-lib"

edition = "2021"
rust-version = "1.62"

keywords = ["multimedia", "audio", "linux", "pipewire", "api"]
categories = ["multimedia::audio", "config"]

[dependencies]
pipewire = "0.7"
thiserror = "1.0.37"
serde = { version = "1.0.147", features = ["derive"] }
toml_edit = { version = "0.15.0", features = ["serde"] }
dirs = "4.0.0"
log = { version = "0.4.17", features = ["serde"] }
